--- a/deflock.html
+++ b/deflock.html
@@ -7,8 +7,8 @@
   <title>Libertarian Party of Floyd County, GA</title>
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
-  <meta property="og:title" content="2025 Convention | Libertarian Party of Floyd County" />
-  <meta property="og:description" content="The annual convention of the Libertarian Party of Bartow, Polk, and Floyd County, GA will be held on Wednesday, January 15th, 2025, at 7:00 p.m., at Osprey Shooting Solutions in Rome, GA at 1165 Blacks Bluff Rd SW, Rome, GA 30161. Anybody who is a dues-paying member of the Libertarian Party of Georgia may attend as a voting-member at convention." />
+  <meta property="og:title" content="Deflock | Libertarian Party of Floyd County" />
+  <meta property="og:description" content="Your property taxes are being used to fund a war: a war on your privacy. Northwest Georgia is saturated with Flock Safety cameras that track and log your movements in a database for Floyd County Police to search and monitor. This isn't a conspiracy — it's reality." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -93,13 +93,15 @@
     style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.9)), url('assets/images/about-us.jpg');"
     class="hero">
     <div class="hero-text">
-      <h1 style="font-size: 50px; line-height: 1;">2025 Annual<br>Convention</h1>
+      <h1 style="font-size: 50px; line-height: 1;">You're Being Tracked<br>by Floyd County</h1>
+      <p1>It's not a conspiracy — it's reality.</p1>
     </div>
   </section>
 
   <section>
     <div class="row">
-      <h1>Local Convention Information</h1>
+      <h1>Meet Flock Safety, the bad guy of our story</h1>
+
       <p style="padding-bottom: 10px;">Per our bylaws, we are required to host an affiliate convention each year in the months prior to the state convention. This year, the state convention will occur on March 8th, 2025, so we will be hosting our local convention in January. All members who are current on their dues to the Libertarian Party of Georgia and who is a bonafide resident of the Bartow, Polk, or Floyd County area is considered a voting member.</p>
 
       <p><strong>Where?</strong> Osprey Shooting Solutions at 1165 Blacks Bluff Rd SW, Rome, GA 30161</p>
@@ -135,7 +137,8 @@
   <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
     <div class="footer">
       <div class="hero-text">
-        <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of Georgia</a></p1>
+        <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of
+              Georgia.<br />bartowpolkfloyd@lpgeorgia.com</a></p1>
       </div>
     </div>
   </div>
