Another Deflock Draft

--- a/deflock.html
+++ b/deflock.html
@@ -100,9 +100,9 @@
 
   <section>
     <div class="row">
-      <h1>Meet Flock Safety, the bad guy of our story</h1>
+      <h1>Meet Flock Safety, the villian of our story</h1>
 
-      <p style="padding-bottom: 10px;">Per our bylaws, we are required to host an affiliate convention each year in the months prior to the state convention. This year, the state convention will occur on March 8th, 2025, so we will be hosting our local convention in January. All members who are current on their dues to the Libertarian Party of Georgia and who is a bonafide resident of the Bartow, Polk, or Floyd County area is considered a voting member.</p>
+      <p style="padding-bottom: 10px;">Flock Safety is a security company headquartered in Atlanta, GA that makes license plate reader (LPR) cameras for local governments and homeowners associations. Many other companies make similar cameras, like Motorola. But what does Flock Safety do differently? Flock doesn't delete the camera data. The data gathered by the cameras is logged into a database managed by Floyd County and Flock Safety: an actual location tracking database. These cameras know where you are and can draw your daily routine out for law enforcement or other nefarious actors if the data comes into the wrong hands.</p>
 
       <p><strong>Where?</strong> Osprey Shooting Solutions at 1165 Blacks Bluff Rd SW, Rome, GA 30161</p>
       <p><strong>When?</strong> Wednesday, January 15th, 2025</p>
