--- a/deflock.html
+++ b/deflock.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Libertarian Party of Floyd County, GA</title>
+  <title>Flock Safety | Libertarian Party of Floyd County, GA</title>
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
   <meta property="og:title" content="Deflock | Libertarian Party of Floyd County" />
-  <meta property="og:description" content="Your property taxes are being used to fund a war: a war on your privacy. Northwest Georgia is saturated with Flock Safety cameras that track and log your movements in a database for Floyd County Police to search and monitor. This isn't a conspiracy — it's reality." />
+  <meta property="og:description"
+    content="Your property taxes are being used to fund a war: a war on your privacy. Northwest Georgia is saturated with Flock Safety cameras that track and log your movements in a database for Floyd County Police to search and monitor. This isn't a conspiracy — it's reality." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -35,14 +36,14 @@
   </script>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-G1KYEEZ7E0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1KYEEZ7E0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-G1KYEEZ7E0');
-</script>
+    gtag('config', 'G-G1KYEEZ7E0');
+  </script>
 </head>
 
 <body>
@@ -102,19 +103,68 @@
     <div class="row">
       <h1>Meet Flock Safety, the villian of our story</h1>
 
-      <p style="padding-bottom: 10px;">Flock Safety is a security company headquartered in Atlanta, GA that makes license plate reader (LPR) cameras for local governments and homeowners associations. Many other companies make similar cameras, like Motorola. But what does Flock Safety do differently? Flock doesn't delete the camera data. The data gathered by the cameras is logged into a database managed by Floyd County and Flock Safety: an actual location tracking database. These cameras know where you are and can draw your daily routine out for law enforcement or other nefarious actors if the data comes into the wrong hands.</p>
+      <p style="padding-bottom: 10px;">Flock Safety is a security company headquartered in Atlanta, GA that makes
+        license plate reader (LPR) cameras for local governments and homeowners associations. Many other companies make
+        similar cameras, like Motorola. But what does Flock Safety do differently? Flock doesn't delete the camera data.
+        The data gathered by the cameras is logged into a database managed by Floyd County and Flock Safety: an actual
+        location tracking database. These cameras know where you are and can draw your daily routine out for law
+        enforcement or other nefarious actors if the data comes into the wrong hands.</p>
+      <iframe width="100%" height="600" style="border: none;"
+        src="https://deflock.me/map?fullscreen=true#map=13/34.248490/-85.174084"></iframe>
 
-      <p><strong>Where?</strong> Osprey Shooting Solutions at 1165 Blacks Bluff Rd SW, Rome, GA 30161</p>
-      <p><strong>When?</strong> Wednesday, January 15th, 2025</p>
-      <p><strong>Time?</strong> 7:00 p.m.</p>
+      <h2>Flock in the News</h2>
+      <section>
+        <div class="row" style="padding-top: 0; padding-bottom: 0; position: relative;">
+          <div class="columnleft">
+            <!-- Left Column -->
+            <section style="background-color:#0f0f0f;">
+              <img
+                src="https://specials-images.forbesimg.com/imageserve/6716bd64aaf902116f0e7769/Surveillance-street-camera-in-city-and-icons/960x0.jpg"
+                style="width: 100%;">
+              <h1 style="color:white;padding-top: 0px;margin: 10px;line-height: 1.1;">Privacy Violated, Warrantless
+                Surveillance Alleges Flock Safety Camera Lawsuit</h1>
+              <p1 style="color: white;margin: 10px;">By Lars Daniel — Forbes Magazine</p1>
+              <p1 style="color: white;margin: 10px;">A federal lawsuit filed by the Institute for Justice against the
+                Virginia city of Norfolk, challenging the city’s widespread deployment of Flock Safety Automated License
+                Plate Recognition (ALPR) cameras.</p1>
+              <p1 style="color: white;padding: 10px;">Oct 22, 2024</p1>
+            </section>
+          </div>
+          <div class="columnmiddle">
+            <section style="background-color:#0f0f0f;">
+              <img
+                src="https://specials-images.forbesimg.com/imageserve/6716bd64aaf902116f0e7769/Surveillance-street-camera-in-city-and-icons/960x0.jpg"
+                style="width: 100%;">
+              <h1 style="color:white;padding-top: 0px;margin: 10px;line-height: 1.1;">Privacy Violated, Warrantless
+                Surveillance Alleges Flock Safety Camera Lawsuit</h1>
+              <p1 style="color: white;margin: 10px;">By Lars Daniel — Forbes Magazine</p1>
+              <p1 style="color: white;margin: 10px;">A federal lawsuit filed by the Institute for Justice against the
+                Virginia city of Norfolk, challenging the city’s widespread deployment of Flock Safety Automated License
+                Plate Recognition (ALPR) cameras.</p1>
+              <p1 style="color: white;padding: 10px;">Oct 22, 2024</p1>
+            </section>
+          </div>
+          <div class="columnright">
+            <section style="background-color:#0f0f0f;">
+              <img
+                src="https://specials-images.forbesimg.com/imageserve/6716bd64aaf902116f0e7769/Surveillance-street-camera-in-city-and-icons/960x0.jpg"
+                style="width: 100%;">
+              <h1 style="color:white;padding-top: 0px;margin: 10px;line-height: 1.1;">Privacy Violated, Warrantless
+                Surveillance Alleges Flock Safety Camera Lawsuit</h1>
+              <p1 style="color: white;margin: 10px;">By Lars Daniel — Forbes Magazine</p1>
+              <p1 style="color: white;margin: 10px;">A federal lawsuit filed by the Institute for Justice against the
+                Virginia city of Norfolk, challenging the city’s widespread deployment of Flock Safety Automated License
+                Plate Recognition (ALPR) cameras.</p1>
+              <p1 style="color: white;padding: 10px;">Oct 22, 2024</p1>
+            </section>
+          </div>
+        </div>
+      </section>
 
-      <h2>Meeting Notice</h2>
-      <p1>The annual convention of the Libertarian Party of Bartow, Polk, and Floyd County, GA will be held on Wednesday, January 15th, 2025, at 7:00 p.m., at Osprey Shooting Solutions in Rome, GA at 1165 Blacks Bluff Rd SW, Rome, GA 30161. Anybody who is a dues-paying member of the Libertarian Party of Georgia may attend as a voting-member at convention.</p1>
-
-      <h2>Convention Agenda</h2>
+      <h2>Our Open Records Act Research</h2>
       <div class="pc-only">
-        <p><embed src="/assets/docs/LPBPFCGA 2025 Convention Agenda.pdf" width="100%" height="650" 
-          type="application/pdf"></p>
+        <p><embed src="/assets/docs/LPBPFCGA 2025 Convention Agenda.pdf" width="100%" height="650"
+            type="application/pdf"></p>
       </div>
       <div class="mobile-only">
         <p><a href="/assets/docs/LPBPFCGA 2025 Convention Agenda.pdf">Link to the Agenda</a></p>
@@ -122,15 +172,16 @@
 
       <h2>Affiliate Bylaws</h2>
       <div class="pc-only">
-        <p><embed src="/assets/docs/LPBPFCGA Bylaws.pdf" width="100%" height="650" 
-          type="application/pdf"></p>
+        <p><embed src="/assets/docs/LPBPFCGA Bylaws.pdf" width="100%" height="650" type="application/pdf"></p>
       </div>
       <div class="mobile-only">
         <p><a href="/assets/docs/LPBPFCGA Bylaws.pdf">Link to our Bylaws</a></p>
       </div>
 
       <h2>Additional Information</h2>
-      <p>For any questions or other convention-related inquiries, contact either <a href="mailto:mitchell.johnson@lpgeorgia.com">mitchell.johnson@lpgeorgia.com</a> or <a href="mailto:sergio.ortega@lpfloyd.com">sergio.ortega@lpfloyd.com</a></p>
+      <p>For any questions or other convention-related inquiries, contact either <a
+          href="mailto:mitchell.johnson@lpgeorgia.com">mitchell.johnson@lpgeorgia.com</a> or <a
+          href="mailto:sergio.ortega@lpfloyd.com">sergio.ortega@lpfloyd.com</a></p>
     </div>
   </section>
 
@@ -138,7 +189,7 @@
     <div class="footer">
       <div class="hero-text">
         <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of
-              Georgia.<br />bartowpolkfloyd@lpgeorgia.com</a></p1>
+            Georgia.<br />bartowpolkfloyd@lpgeorgia.com</a></p1>
       </div>
     </div>
   </div>
