--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
   <meta property="og:title" content="Libertarian Party of Floyd County" />
-  <meta property="og:description"
-    content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
+  <meta property="og:description" content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -39,7 +38,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1KYEEZ7E0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-G1KYEEZ7E0');
