--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
   <meta property="og:title" content="Libertarian Party of Floyd County" />
-  <meta property="og:description" content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
+  <meta property="og:description"
+    content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -38,7 +39,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1KYEEZ7E0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-G1KYEEZ7E0');
@@ -172,21 +173,27 @@
         <div class="row">
           <div class="leftcolumn"
             style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
-        <!-- CARTERSVILLE MAP PIN
+            <!-- CARTERSVILLE MAP PIN
         <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
 src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrkhziwp4&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
         </iframe>
-        -->
+            -->
 
-            <!-- ROME MAP PIN -->
+            <!-- ROME MAP PIN
             <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
               src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJQYJYsr6kiogRv2BzXvMHwMo&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
-            <!-- -->
+            -->
 
             <!-- OSPREY MAP PIN
             <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
               src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJOXS9St29iogRq6cnqRuYDuA&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
             -->
+
+            <!-- CREEK OUTFITTERS -->
+             <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen 
+              src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJH4RwxK5M9YgRgFDS0vpdyCY&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
+            <!-- -->
+
           </div>
           <div class="rightcolumn" style="width: 45%;">
             <h2 style="padding-top: 0px;">Next Monthly Meeting</h2>
@@ -195,12 +202,10 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
               whether they're libertarians or not. We make an effort to alternate between Cartersville and Rome to best
               accomodate all members of our community.</p1>
             <h4 style="padding-bottom: 0px;">Event Details:</h4>
-            <p1>August Monthly Meeting<br />Mellow Mushroom (Rome, GA)<br />August 16th, 2025 at 7:00 PM
+            <p1>2nd Annual River Cleaning Event<br />Euharlee Creek Outfitters<br />September 13th, 2025 at 11:00 AM
             </p1>
             <h4 style="padding-bottom: 0px;">Attachments</h4>
-            <p1>Meeting Agenda:<br /><a href="/assets/docs/Agenda/Agenda August 16, 2025.pdf">Click Here for
-                Agenda</a><br />Minutes for Approval:<br /><a href="/assets/docs/Minutes/Minutes May 17, 2025.pdf">Click
-                Here for Minutes</a><br /></p1>
+            <p1>REGISTER FOR A KAYAK:<br /><a href="https://forms.gle/5gi9PAFizD8T2nqT9">Reserve Your Kayak Here</a></p1>
           </div>
         </div>
       </div>
@@ -209,23 +214,25 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
     <section>
       <div class="row" style="padding-top:0px">
         <!-- Element to contain animated typing -->
-      <h1 style="padding-top:0px">HAD ENOUGH?<br />FIGHT FOR <span id="typed"></span></h1>
+        <h1 style="padding-top:0px">HAD ENOUGH?<br />FIGHT FOR <span id="typed"></span></h1>
 
-      <!-- Load library from the CDN -->
-      <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+        <!-- Load library from the CDN -->
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
-      <!-- Setup and start animation! -->
-      <script>
-        var typed = new Typed('#typed', {
-          strings: ['FREEDOM.', 'LIBERTY.', 'HAPPINESS.', 'LOWER TAXES.', 'LESS MANDATES.', 'LESS RULES.', 'A BALANCED BUDGET.', 'A BETTER COUNTY GOVERNMENT.', 'A GRASSROOTS MOVEMENT.', 'A TRUE AMERICAN MOVEMENT.'],
-          typeSpeed: 50,
-          shuffle: true,
-          loop: true,
-          loopCount: Infinity,
-        });
-      </script>
+        <!-- Setup and start animation! -->
+        <script>
+          var typed = new Typed('#typed', {
+            strings: ['FREEDOM.', 'LIBERTY.', 'HAPPINESS.', 'LOWER TAXES.', 'LESS MANDATES.', 'LESS RULES.', 'A BALANCED BUDGET.', 'A BETTER COUNTY GOVERNMENT.', 'A GRASSROOTS MOVEMENT.', 'A TRUE AMERICAN MOVEMENT.'],
+            typeSpeed: 50,
+            shuffle: true,
+            loop: true,
+            loopCount: Infinity,
+          });
+        </script>
 
-      <p1>We are Libertarian because we are tired with the status quo. Both parties promise us freedom, but neither of them deliver. Whether it's because of backdoor deals or big-named donors, we're tired of the fighting and just want a world of freedom for everyone. Our motto is simple: DON'T TREAD ON ANYONE.</p1>
+        <p1>We are Libertarian because we are tired with the status quo. Both parties promise us freedom, but neither of
+          them deliver. Whether it's because of backdoor deals or big-named donors, we're tired of the fighting and just
+          want a world of freedom for everyone. Our motto is simple: DON'T TREAD ON ANYONE.</p1>
       </div>
     </section>
 
