--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             On the flip side, that requires grassroot donations to help fund our operations here in Northwest Georgia.
             If
             you support our work, please consider donating to the Libertarian Party of Georgia below.</p1>
-          <a href="https://lpgeorgia.com/donate&quot;LPBPFCGA&quot;"><button class="button">Donate</button></a>
+          <a href="https://lpgeorgia.com/donate?source=&quot;LPBPFCGA&quot;"><button class="button">Donate</button></a>
         </div>
         <div class="rightcolumn" style="width: 45%;">
           <h2 style="color: #0D3B66;">Monthly Meetings</h2>
