--- a/deflock.html
+++ b/deflock.html
@@ -91,7 +91,7 @@
   </header>
 
   <section
-    style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.9)), url('assets/images/about-us.jpg');"
+    style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.9)), url('assets/images/Flock.jpg');"
     class="hero">
     <div class="hero-text">
       <h1 style="font-size: 50px; line-height: 1;">You're Being Tracked<br>by Floyd County</h1>
